# GSE

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  actions.sh
benchmarks/: CMakeLists.txt  benchmark.hpp  benchmark_ode.cpp  common.hpp
benchmarks/module_ode/: dynamic_system.cpp
docs/: blueprint_method.hpp  dev_callback_control_flow.md  dev_eigen_quirks.md  dev_passing_callables.md  guide_backend_motivation.md  guide_custom_scalar_types.md  guide_library_differences.md  guide_modularity_showcase.md  module_ode.md  template.hpp
examples/: CMakeLists.txt  exponent.cpp  harmonic_oscillator.cpp
examples/firstparty/: UTL.hpp
examples/module_ode/: harmonic_oscillator.cpp
include/GSE/: GSE.hpp  alg.hpp  core.hpp  derivative.hpp  gradient.hpp  jacobian.hpp  linear.hpp  nonlinear.hpp  ode.hpp  sde.hpp
include/GSE/detail/: alg.hpp  butcher.hpp  core.hpp  init.hpp  ode.hpp  rng.hpp  sde.hpp  traits.hpp
include/GSE/impl/: butcher.hpp  format.hpp  init.hpp  rng.hpp  traits.hpp  types.hpp
include/GSE/impl/core/: control_flow.hpp  format.hpp  init.hpp  math.hpp  rng.hpp  traits.hpp  types.hpp
include/GSE/impl/derivative/: solver.hpp
include/GSE/impl/derivative/method/: backward_difference.hpp  base.hpp  central_difference.hpp  forward_difference.hpp  four_point_central_difference.hpp
include/GSE/impl/gradient/: solver.hpp
include/GSE/impl/gradient/method/: base.hpp  central_difference.hpp
include/GSE/impl/jacobian/: solver.hpp
include/GSE/impl/jacobian/method/: base.hpp  central_difference.hpp
include/GSE/impl/linear/: solver.hpp
include/GSE/impl/linear/method/: full_pivot_lu.hpp  householder_qr.hpp  llt.hpp  partial_pivot_lu.hpp
include/GSE/impl/nonlinear/: solver.hpp
include/GSE/impl/nonlinear/method/: base.hpp  newton.hpp
include/GSE/impl/ode/: solver.hpp
include/GSE/impl/ode/method/: base.hpp  euler.hpp  implicit_euler.hpp  rk4.hpp  symplectic_euler.hpp
include/GSE/impl/sde/: solver.hpp
include/GSE/impl/sde/method/: base.hpp  euler_maruyama.hpp
scripts/: harmonic_oscillator.wls
source/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  common.hpp  module_derivative.cpp  module_gradient.cpp  module_jacobian.cpp  module_linear.cpp  module_nonlinear.cpp  module_ode.cpp  test.hpp  test_derivative.cpp  test_gradient.cpp  test_jacobian.cpp  test_linear.cpp  test_nonlinear.cpp  test_ode.cpp
